# PEBIECCL

./: CMakeCache.txt  CMakeLists.txt  Makefile  PEBIECCL.cpp  README.md  cmake_install.cmake  moment_of_inertia.cpp  moment_of_inertia.h  planeInfo.cpp  planeInfo.h  planeObject.cpp  planeObject.h  plane_segmentation.cpp  plane_segmentation.h
